--- a/src/LyricList/LyricList.module.css
+++ b/src/LyricList/LyricList.module.css
@@ -7,10 +7,26 @@
 }
 
 .Item {
-    background-color: #f8f7f7;
+    background-color: #F88619;
+    text-align: center;
     margin-bottom: 20px;
     padding-bottom: 30px;
     -webkit-box-shadow: 18px 18px 30px -17px rgba(51, 51, 51, 0.18);
     -moz-box-shadow: 18px 18px 30px -17px rgba(51, 51, 51, 0.18);
     box-shadow: 18px 18px 30px -17px rgba(51, 51, 51, 0.18);
+}
+
+.Button {
+    /* border: 2px solid #1E9C9E; */
+    border-style: none;
+    background-color: #c9feff;
+    border-radius: 8px;
+    width: 80%;
+    height: 44px;
+    color: #1E9C9E;
+    font-size: 14px;
+    font-weight: 600;
+    -webkit-box-shadow: 6px 6px 0px 0px rgba(30, 156, 158, 1);
+    -moz-box-shadow: 6px 6px 0px 0px rgba(30, 156, 158, 1);
+    box-shadow: 6px 6px 0px 0px rgba(30, 156, 158, 1);
 }
