--- a/src/SearchInput/SearchInput.module.css
+++ b/src/SearchInput/SearchInput.module.css
@@ -1,28 +1,18 @@
 .Form {
-    /* background-color: yellow; */
     width: 80%;
     margin: auto;
 }
 
 .Input {
-    /* background-color: red; */
     height: 44px;
     width: 50%;
     border-style: none;
-    /* -webkit-box-shadow: 18px 18px 30px -17px rgba(51, 51, 51, 0.18);
-    -moz-box-shadow: 18px 18px 30px -17px rgba(51, 51, 51, 0.18);
-    box-shadow: 18px 18px 30px -17px rgba(51, 51, 51, 0.18); */
     text-indent: 4%;
     background-color: #fff;
     border: 2px solid #333333;
-    /* border-radius: 4px; */
-    /* height: 44px;
-    width: 50%;
-    margin-left: 40px; */
 }
 
 .Button {
-    /* border-radius: 4px; */
     height: 50px;
     margin-left: 8px;
     border-style: none;
@@ -31,8 +21,17 @@
     color: #333333;
     border: 2px solid #333333;
     font-weight: 600;
-    /* -webkit-box-shadow: 6px 6px 0px 0px rgba(30, 156, 158, 1);
-    -moz-box-shadow: 6px 6px 0px 0px rgba(30, 156, 158, 1);
-    box-shadow: 6px 6px 0px 0px rgba(30, 156, 158, 1); */
-    /* margin-left: 20px; */
+}
+
+@media only screen and (min-width: 600px) {
+    .Form {
+        width: 94%;
+        margin: auto;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+    .Input {
+        width: 80%;
+    }
 }
